--- a/elec-security/pom.xml
+++ b/elec-security/pom.xml
@@ -96,6 +96,15 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.2</version>
+        </dependency>
     </dependencies>
 
     <build>
