--- a/elec-security/src/main/resources/application.yml
+++ b/elec-security/src/main/resources/application.yml
@@ -17,6 +17,17 @@ spring:
       max-lifetime: 1800000
       connection-timeout: 30000
       connection-test-query: SELECT 1
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: 123456
+      database: 0 #几号库
+      lettuce:
+        pool:
+          max-active: 8 #最大连接
+          max-idle: 8 #最大空闲连接
+          min-idle: 0 #最小空闲连接
+          max-wait: 100ms # 连接等待时间
 server:
   port: 8666
 
